--- a/css/min-heap.css
+++ b/css/min-heap.css
@@ -11,13 +11,16 @@
   position: sticky;
   top: 0;
   z-index: 10;
+  height: 50px;
+  display: flex;
+  align-items: center;
 }
 
 .mh-header-inner {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 24px;
-  height: 60px;
+  height: 50px;
   display: flex;
   align-items: center;
   gap: 20px;
