--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ body {
 
 .header-inner {
   max-width: 1100px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   padding: 0 24px;
   height: 50px;
   display: flex;
@@ -283,7 +283,7 @@ body {
   flex: 1;
   max-width: 1100px;
   margin: 0 auto;
-  padding: 48px 24px;
+  padding: 24px;
   width: 100%;
 }
 
