--- a/css/min-heap.css
+++ b/css/min-heap.css
@@ -55,7 +55,7 @@
 }
 
 .mh-main {
-  max-width: 1200px;
+  /* max-width: 1200px; */
   margin: 0 auto;
   padding: 32px 24px 60px;
   width: 100%;
@@ -97,7 +97,7 @@
 
 .mh-input {
   flex: 1;
-  min-width: 200px;
+  /* min-width: 200px; */
   background: var(--bg-base);
   border: 1px solid var(--border);
   border-radius: var(--radius-sm);
